--- a/components/home/projects/style.module.scss
+++ b/components/home/projects/style.module.scss
@@ -6,7 +6,7 @@
   background: color(dark-gray);
 
   @include tablet {
-    padding: spacing(section-mob-padding);
+    padding: spacing(tablet-padding);
   }
 
   .projectHighlight {
@@ -174,6 +174,10 @@
     max-width: 50%;
     margin: 0px;
     scale: 1.1;
+
+    @include tablet {
+      max-width: 90%;
+    }
 
     @include mobile {
       font-size: text(lg);
